--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+
   "private": true,
   "dependencies": {
     "@craco/craco": "^7.1.0",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.0.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
