--- a/package.json
+++ b/package.json
@@ -13,21 +13,27 @@
   "author": "sarab",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "chalk": "^5.3.0",
+    "cloudinary": "^1.40.0",
     "colors": "^1.4.0",
+    "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-validator": "^7.0.1",
+    "gravatar": "^1.8.2",
     "gridfs-stream": "^1.1.1",
     "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
